# planetSimulation

./: .gitignore  CMakeLists.txt  README.md  build-start.bat  build.bat  imgui.ini  start.bat
include/glad/: glad.h
include/planets/: Camera.hpp  GUI.hpp  PhysicsEngine.hpp  Planet.hpp  Renderer.hpp  Simulation.hpp  Vector2.hpp
src/: glad.c  main.cpp
src/core/: Camera.cpp  GUI.cpp  Renderer.cpp  Simulation.cpp
src/rendering/: renderer.cpp
